增加windows构建示例